# Kataglyphis-WebDavClient

./: .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
.codacy/: codacy.yaml
.github/: github_copilot_instructions.md
.github/actions/cleanup-disk-space/: action.yml
.github/workflows/: build-docs.yml  packaging-binaries-linux.yml  packaging-binaries-windows-x86-64.yml  packaging-sources.yml  pages.yml  pytest-matrix.yml  static-analysis.yml  ubuntu-24.04-amd64-arm64.yml  ubuntu-24.04-arm.yml  ubuntu-24.04.yml  windows-2025.yml
bench/: demo_cprofile.py  demo_line_profiler.py  demo_memory_profiling.py  demo_py_spy.py  demo_pytest_benchmark.py  demo_timeit.py
demo/: download_markdown_files.py
docs/source/: README.md  __init__.py  conf.py  index.rst  webdavclient.rst
docs/source/_static/css/: custom.css
kataglyphis_webdavclient/: __init__.py  dummy.py  webdavclient.py
requirements/: dev.txt  docs.txt  test.txt
scripts/linux/: ci_build_docs.sh  ci_packaging.sh  ci_static_analysis.sh  ci_tests.sh  setup-dependencies.sh
scripts/windows/: Build-Windows.ps1  setup-dependencies.ps1
tests/: mock_webdav_server.py  test_webdav_client.py
tests/integration/: test_dummy.py
tests/remote/data/: Readme.md
tests/remote/data/subfolder1/: text.txt
tests/unit/: test_dummy.py
webdavclient/: __init__.py  webdavclient.py
