[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["kataglyphis_webdavclient"]

[tool.setuptools.packages.find]
exclude=["test*","models*","data*","docs*","demo*"]

[project]
name = "kataglyphis_webdavclient"
version = "0.0.1"
authors = [
  { name="Jonas Heinle", email="contact@jonasheinle.de" },
]
license = {file = "LICENSE"}
description = "This package contains modules to easily communicate to a host via WebDav."
readme = "README.md"
dependencies = [
    "requests",
    "loguru",
]
requires-python = ">=3.11"
keywords=["webdav", "cloud"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://webdavclient.jonas.heinle.de"
Source = "https://github.com/Kataglyphis/Kataglyphis-WebDavClient"

[project.optional-dependencies]
tests = [
    "pytest",
    "pytest-benchmark",
    "pytest-cov",
    "line_profiler",
    "wsgidav",
    "cheroot",
    "black",
    "flake8",
    "mypy",
    "pylint",
    "isort",
    "pre-commit"
]

docs = [
  "sphinx",
  "sphinx-rtd-theme",
  "myst-parser",
  "pyyaml",
  "cmake-format",
  "breathe",
  "exhale"
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
exclude = [
    '^file1\.py$',  # TOML literal string (single-quotes, no escaping necessary)
    "^file2\\.py$",  # TOML basic string (double-quotes, backslash and other characters need escaping)
]

[tool.vulture]
exclude = [
    '^file1\.py$',  # TOML literal string (single-quotes, no escaping necessary)
    "^file2\\.py$",  # TOML basic string (double-quotes, backslash and other characters need escaping)
]
