[build-system]
requires = ["setuptools>=70.0", "wheel", "cython"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["test*", "data*", "docs*", "demo*", "bench*"]

[tool.setuptools.dynamic]
version = { file = "VERSION.txt" }

[project]
name = "kataglyphis_webdavclient"
dynamic = ["version"]
authors = [
  { name="Jonas Heinle", email="contact@jonasheinle.de" },
]
license = {file = "LICENSE"}
description = "This package contains modules to easily communicate to a host via WebDav."
readme = "README.md"
requires-python = ">=3.10"
keywords=["webdav", "cloud"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.14t",
]

dependencies = [
    "requests",
    "loguru",
    "cython",
    "numpy"
]

[project.optional-dependencies]
tests = [
    "pytest",
    "pre-commit",
    "line_profiler",    # line-by-line profiling
    "pytest-benchmark", # benchmark tests
    "memory-profiler",  # memory profiling
    "py-spy",           # profiling
    "pytest-cov",
    "pytest-md-report",
    "pytest-md",
    "pytest-html",
    "codespell",
    "mypy",             # type checking
    "bandit",           # find security vulnerabilities
    "vulture",          # find dead code
    "ruff",             # replacement for flake8
    "ty",               # type checking
    "wsgidav",
    "cheroot",
]

docs = [
  "sphinx",
  "sphinx-rtd-theme",
  "myst-parser",
  "pyyaml",
  "cmake-format",
  "breathe",
  "exhale"
]

[project.urls]
Homepage = "https://webdavclient.jonas.heinle.de"
Source = "https://github.com/Kataglyphis/Kataglyphis-WebDavClient"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
exclude = [
    '^file1\.py$',  # TOML literal string (single-quotes, no escaping necessary)
    "^file2\\.py$",  # TOML basic string (double-quotes, backslash and other characters need escaping)
]

[tool.vulture]
exclude = [
    '^file1\.py$',  # TOML literal string (single-quotes, no escaping necessary)
    "^file2\\.py$",  # TOML basic string (double-quotes, backslash and other characters need escaping)
]
