[build-system]
requires = ["setuptools>=70.0", "wheel", "cython"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["test*", "data*", "docs*", "demo*", "bench*"]

[tool.setuptools.dynamic]
version = { file = "VERSION.txt" }

[project]
name = "kataglyphis_webdavclient"
dynamic = ["version"]
authors = [
  { name="Jonas Heinle", email="contact@jonasheinle.de" },
]
license = {file = "LICENSE"}
description = "This package contains modules to easily communicate to a host via WebDav."
readme = "README.md"
requires-python = ">=3.10"
keywords=["webdav", "cloud"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.14t",
]

dependencies = [
    "requests",
    "loguru",
    "cython",
    "numpy"
]

[project.optional-dependencies]
tests = [
    "pytest",
    "pre-commit",
    "line_profiler",    # line-by-line profiling
    "pytest-benchmark", # benchmark tests
    "memory-profiler",  # memory profiling
    "py-spy",           # profiling
    "pytest-cov",
    "pytest-md-report",
    "pytest-md",
    "pytest-html",
    "codespell",
    "mypy",             # type checking
    "bandit",           # find security vulnerabilities
    "vulture",          # find dead code
    "ruff",             # replacement for flake8
    "ty",               # type checking
    "wsgidav",
    "cheroot",
]

docs = [
  "sphinx",
  "sphinx-rtd-theme",
  "myst-parser",
  "pyyaml",
  "cmake-format",
  "breathe",
  "exhale"
]

[project.urls]
Homepage = "https://webdavclient.jonas.heinle.de"
Source = "https://github.com/Kataglyphis/Kataglyphis-WebDavClient"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
exclude = [
    '^file1\.py$',  # TOML literal string (single-quotes, no escaping necessary)
    "^file2\\.py$",  # TOML basic string (double-quotes, backslash and other characters need escaping)
]

[tool.vulture]
exclude = [
    '^file1\.py$',  # TOML literal string (single-quotes, no escaping necessary)
    "^file2\\.py$",  # TOML basic string (double-quotes, backslash and other characters need escaping)
]

# ============================================================================
# RUFF - Linting and Formatting (STRICT MODE)
# ============================================================================
[tool.ruff]
line-length = 88  # Black-compatible (industry standard)
target-version = "py313"

[tool.ruff.lint]
# Enable all rules, then selectively ignore only what's absolutely necessary
select = ["ALL"]

ignore = [
    # Formatter conflicts (REQUIRED - these conflict with ruff format)
    "COM812",   # missing trailing comma
    "ISC001",   # implicit string concat
    
    # Docstring style conflicts (REQUIRED - mutually exclusive rules)
    "D203",     # one-blank-line-before-class (conflicts with D211)
    "D213",     # multi-line-summary-second-line (conflicts with D212)
    
    # Line length in docstrings (hard to avoid, formatter handles code)
    "E501",     # line too long (docstrings/comments; code handled by formatter)
    
    # Exception handling - intentional for graceful degradation with external libs
    "BLE001",   # blind exception (needed for mlflow/optional dependencies)
    
    # Pylint - slightly relaxed for complex ML code
    "PLR0913",  # too many arguments (ML functions often need many params)
    "PLR2004",  # magic values (common in ML: batch sizes, dimensions)
]

# Stricter settings
unfixable = []  # Allow all auto-fixes
explicit-preview-rules = true  # Opt-in to preview rules explicitly

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "D104"]
"tests/**/*.py" = ["S101", "PLR2004"]

[tool.ruff.lint.isort]
lines-after-imports = 2
force-single-line = false
combine-as-imports = true

[tool.ruff.lint.pylint]
max-args = 7        # ML functions often need more params
max-branches = 15   # Complex logic in data loading
max-statements = 60 # Training loops are verbose
max-returns = 6

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = false
suppress-none-returning = false

[tool.ruff.lint.flake8-type-checking]
strict = true  # Stricter type checking imports

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true

# ============================================================================
# TY - Type Checking (STRICT MODE)
# ============================================================================
[tool.ty.environment]
python-version = "3.13"

[tool.ty.src]
include = ["kataglyphispythonpackage", "scripts/"]
exclude = [
    "**/__pycache__",
    "*.tmp",
    "build/",
    "dist/",
    ".venv/",
]
respect-ignore-files = true

[tool.ty.rules]
# STRICT: Enable all warnings as errors
# Only ignore mlflow lazy-loading issue for this specific file
possibly-missing-attribute = "ignore"  # mlflow uses lazy-loading API
